--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -18,6 +18,10 @@
                 <source>stub_edit_form_title</source>
                 <target>Edit "stub_name"</target>
             </trans-unit>
+            <trans-unit id="therapy_new_form_title">
+                <source>therapy_new_form_title</source>
+                <target>Enter labels</target>
+            </trans-unit>
             <trans-unit id="search_label">
                 <source>search_label</source>
                 <target>Search Label</target>
@@ -65,6 +69,38 @@
             <trans-unit id="form_delete_undo">
                 <source>form_delete_undo</source>
                 <target>Delete/Undelete</target>
+            </trans-unit>
+            <trans-unit id="therapy_table_title">
+                <source>therapy_table_title</source>
+                <target>Title</target>
+            </trans-unit>
+            <trans-unit id="therapy_table_name">
+                <source>therapy_table_name</source>
+                <target>Name</target>
+            </trans-unit>
+            <trans-unit id="therapy_table_description">
+                <source>therapy_table_description</source>
+                <target>Description</target>
+            </trans-unit>
+            <trans-unit id="therapy_table_background">
+                <source>therapy_table_background</source>
+                <target>Background</target>
+            </trans-unit>
+            <trans-unit id="therapy_table_comment">
+                <source>therapy_table_comment</source>
+                <target>Comment</target>
+            </trans-unit>
+            <trans-unit id="therapy_table_label_list">
+                <source>therapy_table_label_list</source>
+                <target>Labels list</target>
+            </trans-unit>
+            <trans-unit id="therapy_table_load_labels">
+                <source>therapy_table_load_labels</source>
+                <target>Load labels</target>
+            </trans-unit>
+            <trans-unit id="therapy_table_generate_button">
+                <source>therapy_table_generate_button</source>
+                <target>Generate</target>
             </trans-unit>
         </body>
     </file>
