--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -102,6 +102,10 @@
                 <source>therapy_table_generate_button</source>
                 <target>Generate</target>
             </trans-unit>
+            <trans-unit id="therapy_stubs_list_title">
+                <source>therapy_stubs_list_title</source>
+                <target>Therapy Stubs List</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
