--- a/translations/messages.de.xlf
+++ b/translations/messages.de.xlf
@@ -1,127 +1,34 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-    <file source-language="en" datatype="plaintext" original="file.ext">
-        <body>
-            <trans-unit id="project_title">
-                <source>project_title</source>
-                <target>Therapiezusammenstellung</target>
-            </trans-unit>
-            <trans-unit id="app_main_page_title">
-                <source>app_main_page_title</source>
-                <target>Heim</target>
-            </trans-unit>
-            <trans-unit id="app_stabs_list_page_title">
-                <source>app_stabs_list_page_title</source>
-                <target>Stummel</target>
-            </trans-unit>
-            <trans-unit id="app_labels_list_page_title">
-                <source>app_labels_list_page_title</source>
-                <target>Labels</target>
-            </trans-unit>
-            <trans-unit id="main_form_title">
-                <source>main_form_title</source>
-                <target>Hauptform</target>
-            </trans-unit>
-            <trans-unit id="stub_new_form_title">
-                <source>stub_new_form_title</source>
-                <target>Neuer Therapiestummel</target>
-            </trans-unit>
-            <trans-unit id="stub_edit_form_title">
-                <source>stub_edit_form_title</source>
-                <target>Bearbeiten "stub_name"</target>
-            </trans-unit>
-            <trans-unit id="therapy_new_form_title">
-                <source>therapy_new_form_title</source>
-                <target>Enter labels</target>
-            </trans-unit>
-            <trans-unit id="search_label">
-                <source>search_label</source>
-                <target>Suchlabel</target>
-            </trans-unit>
-            <trans-unit id="search_therapy">
-                <source>search_therapy</source>
-                <target>Therapie suchen</target>
-            </trans-unit>
-            <trans-unit id="new_therapy_stub">
-                <source>new_therapy_stub</source>
-                <target>Neuer Therapiestummel</target>
-            </trans-unit>
-            <trans-unit id="new_therapy_scheme">
-                <source>new_therapy_scheme</source>
-                <target>Neues Therapieschema</target>
-            </trans-unit>
-            <trans-unit id="therapy_stub_form">
-                <source>therapy_stub_form</source>
-                <target>Neuer Therapiestummel</target>
-            </trans-unit>
-            <trans-unit id="therapy_stub_form_name">
-                <source>therapy_stub_form_name</source>
-                <target>Name</target>
-            </trans-unit>
-            <trans-unit id="therapy_stub_form_description">
-                <source>therapy_stub_form_description</source>
-                <target>Beschreibung</target>
-            </trans-unit>
-            <trans-unit id="therapy_stub_form_background">
-                <source>therapy_stub_form_background</source>
-                <target>Hintergrund</target>
-            </trans-unit>
-            <trans-unit id="therapy_stub_form_labels">
-                <source>therapy_stub_form_labels</source>
-                <target>Labels</target>
-            </trans-unit>
-            <trans-unit id="form_save">
-                <source>form_save</source>
-                <target>Speichern</target>
-            </trans-unit>
-            <trans-unit id="form_cancel">
-                <source>form_cancel</source>
-                <target>Stornieren</target>
-            </trans-unit>
-            <trans-unit id="form_delete_undo">
-                <source>form_delete_undo</source>
-                <target>Löschen/Wiederherstellen</target>
-            </trans-unit>
-            <trans-unit id="therapy_table_title">
-                <source>therapy_table_title</source>
-                <target>Titel</target>
-            </trans-unit>
-            <trans-unit id="therapy_table_name">
-                <source>therapy_table_name</source>
-                <target>Name</target>
-            </trans-unit>
-            <trans-unit id="therapy_table_description">
-                <source>therapy_table_description</source>
-                <target>Beschreibung</target>
-            </trans-unit>
-            <trans-unit id="therapy_table_background">
-                <source>therapy_table_background</source>
-                <target>Hintergrund</target>
-            </trans-unit>
-            <trans-unit id="therapy_table_comment">
-                <source>therapy_table_comment</source>
-                <target>Kommentar</target>
-            </trans-unit>
-            <trans-unit id="therapy_table_label_list">
-                <source>therapy_table_label_list</source>
-                <target>Liste der Etiketten</target>
-            </trans-unit>
-            <trans-unit id="therapy_table_load_labels">
-                <source>therapy_table_load_labels</source>
-                <target>Etiketten laden</target>
-            </trans-unit>
-            <trans-unit id="therapy_table_generate_button">
-                <source>therapy_table_generate_button</source>
-                <target>Generieren</target>
-            </trans-unit>
-            <trans-unit id="therapy_labels_list_title">
-                <source>therapy_labels_list_title</source>
-                <target>Liste der Therapieetiketten</target>
-            </trans-unit>
-            <trans-unit id="therapy_stubs_list_title">
-                <source>therapy_stubs_list_title</source>
-                <target>Liste der Therapiestummel</target>
-            </trans-unit>
-        </body>
-    </file>
+<?xml version="1.0" encoding="utf-8"?>
+<xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
+  <file source-language="en" target-language="de" datatype="plaintext" original="file.ext">
+    <header>
+      <tool tool-id="symfony" tool-name="Symfony"/>
+    </header>
+    <body>
+      <trans-unit id="bLrYxnm" resname="app-project-title">
+        <source>app-project-title</source>
+        <target>Therapiezusammenstellung</target>
+      </trans-unit>
+      <trans-unit id="a6z2eyn" resname="app-english">
+        <source>app-english</source>
+        <target>Englisch</target>
+      </trans-unit>
+      <trans-unit id="AW6E6.H" resname="app-german">
+        <source>app-german</source>
+        <target>Deutsch</target>
+      </trans-unit>
+      <trans-unit id="S1PqBA." resname="app-home">
+        <source>app-home</source>
+        <target>Heim</target>
+      </trans-unit>
+      <trans-unit id="_.EGDVA" resname="app-labels">
+        <source>app-labels</source>
+        <target>Labels</target>
+      </trans-unit>
+      <trans-unit id="yT7XYQ7" resname="app-therapy-stubs">
+        <source>app-therapy-stubs</source>
+        <target>Therapiestummel</target>
+      </trans-unit>
+    </body>
+  </file>
 </xliff>
