--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -53,6 +53,42 @@
         <source>app-new-therapy-scheme-button</source>
         <target>New therapy scheme</target>
       </trans-unit>
+      <trans-unit id="C2wE6Ah" resname="app-new-therapy-stub-form-title">
+        <source>app-new-therapy-stub-form-title</source>
+        <target>New Therapy Stub</target>
+      </trans-unit>
+      <trans-unit id="0rRDwQu" resname="app-edit-therapy-stub-form-title">
+        <source>app-edit-therapy-stub-form-title</source>
+        <target>Edit Therapy Stub</target>
+      </trans-unit>
+      <trans-unit id="WurMa._" resname="app-therapy-stub-form-label-name">
+        <source>app-therapy-stub-form-label-name</source>
+        <target>Name</target>
+      </trans-unit>
+      <trans-unit id="7a3fLVX" resname="app-therapy-stub-form-label-description">
+        <source>app-therapy-stub-form-label-description</source>
+        <target>Description</target>
+      </trans-unit>
+      <trans-unit id="luCEM2x" resname="app-therapy-stub-form-label-background">
+        <source>app-therapy-stub-form-label-background</source>
+        <target>Background</target>
+      </trans-unit>
+      <trans-unit id="kNAHhwm" resname="app-therapy-stub-form-label-labels">
+        <source>app-therapy-stub-form-label-labels</source>
+        <target>Labels</target>
+      </trans-unit>
+      <trans-unit id="FCVm5Cu" resname="app-save-button">
+        <source>app-save-button</source>
+        <target>Save</target>
+      </trans-unit>
+      <trans-unit id="5rTKEfI" resname="app-cancel-button">
+        <source>app-cancel-button</source>
+        <target>Cancel</target>
+      </trans-unit>
+      <trans-unit id="R4Om9By" resname="app-delete-undo-button">
+        <source>app-delete-undo-button</source>
+        <target>Delete/Undelete</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
