--- a/translations/messages.de.xlf
+++ b/translations/messages.de.xlf
@@ -89,6 +89,18 @@
         <source>app-delete-undo-button</source>
         <target>Löschen/Wiederherstellen</target>
       </trans-unit>
+      <trans-unit id=".2x53wz" resname="app-therapy-stubs-list-page-title">
+        <source>app-therapy-stubs-list-page-title</source>
+        <target>Liste der Therapiestummel</target>
+      </trans-unit>
+      <trans-unit id="DbQUwkJ" resname="app-therapy-stubs-list-label-description">
+        <source>app-therapy-stubs-list-label-description</source>
+        <target>Beschreibung:</target>
+      </trans-unit>
+      <trans-unit id="qfcDnmJ" resname="app-therapy-stubs-list-label-background">
+        <source>app-therapy-stubs-list-label-background</source>
+        <target>Hintergrund:</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
