--- a/translations/messages.de.xlf
+++ b/translations/messages.de.xlf
@@ -153,6 +153,18 @@
         <source>app-therapy-report-generate-report-button</source>
         <target>Bericht generieren</target>
       </trans-unit>
+      <trans-unit id="e8RSXYg" resname="app-label-edit-page-title">
+        <source>app-label-edit-page-title</source>
+        <target>Etikett bearbeiten</target>
+      </trans-unit>
+      <trans-unit id="zfSpLBH" resname="app-therapy-label-edit-form-short-name">
+        <source>app-therapy-label-edit-form-short-name</source>
+        <target>Standardname (wird in der App angezeigt)</target>
+      </trans-unit>
+      <trans-unit id="8hYDwBz" resname="app-therapy-label-edit-form-report-name">
+        <source>app-therapy-label-edit-form-report-name</source>
+        <target>Berichtsname (wird im generierten Bericht angezeigt)</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
