Suppress labels & excerpt|description switch

--- a/translations/messages.de.xlf
+++ b/translations/messages.de.xlf
@@ -185,6 +185,18 @@
         <source>app-save-and-new-button</source>
         <target>Speichern + Neu</target>
       </trans-unit>
+      <trans-unit id="8AsGalb" resname="app-therapy-report-suppress-labels">
+        <source>app-therapy-report-suppress-labels</source>
+        <target>Labels unterdrücken</target>
+      </trans-unit>
+      <trans-unit id="cofIMtF" resname="app-therapy-report-use-excerpt">
+        <source>app-therapy-report-use-excerpt</source>
+        <target>Verwenden Sie 'excerpt' anstelle von 'description'</target>
+      </trans-unit>
+      <trans-unit id="A5mIo.v" resname="app-therapy-report-table-excerpt">
+        <source>app-therapy-report-table-excerpt</source>
+        <target>Auszug</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
