--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -205,6 +205,22 @@
         <source>app-therapy-report-save-as-template-button</source>
         <target>Save as template</target>
       </trans-unit>
+      <trans-unit id="9HQRcL8" resname="app-therapy-scheme-templates">
+        <source>app-therapy-scheme-templates</source>
+        <target>Saved therapy schemes</target>
+      </trans-unit>
+      <trans-unit id="D6nuB.." resname="app-new-therapy-save-scheme-template">
+        <source>app-new-therapy-save-scheme-template</source>
+        <target>Save therapy scheme for re-use</target>
+      </trans-unit>
+      <trans-unit id="UZh.lrg" resname="app-new-therapy-scheme-templates">
+        <source>app-new-therapy-scheme-templates</source>
+        <target>Saved therapy schemes list</target>
+      </trans-unit>
+      <trans-unit id="Vgv6r_t" resname="app-scheme-template-form-label-name">
+        <source>app-scheme-template-form-label-name</source>
+        <target>Template name</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
