--- a/translations/messages.de.xlf
+++ b/translations/messages.de.xlf
@@ -209,6 +209,10 @@
         <source>app-therapy-report-save-as-template-button</source>
         <target>Als Vorlage speichern</target>
       </trans-unit>
+      <trans-unit id="c4VJ4c8" resname="app-therapy-report-update-template-button">
+        <source>app-therapy-report-update-template-button</source>
+        <target>Aktualisieren Sie die aktuelle Vorlage</target>
+      </trans-unit>
       <trans-unit id="9HQRcL8" resname="app-therapy-scheme-templates">
         <source>app-therapy-scheme-templates</source>
         <target>Gespeicherte Therapieschemata</target>
@@ -216,6 +220,10 @@
       <trans-unit id="D6nuB.." resname="app-new-therapy-save-scheme-template">
         <source>app-new-therapy-save-scheme-template</source>
         <target>Therapieschema zur Wiederverwendung speichern</target>
+      </trans-unit>
+      <trans-unit id="Dxueq" resname="app-update-therapy-scheme-template-title">
+        <source>app-update-therapy-scheme-template-title</source>
+        <target>Titel der Schemavorlage aktualisieren</target>
       </trans-unit>
       <trans-unit id="UZh.lrg" resname="app-new-therapy-scheme-templates">
         <source>app-new-therapy-scheme-templates</source>
