--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -181,6 +181,10 @@
         <source>app-delete-button</source>
         <target>Delete</target>
       </trans-unit>
+      <trans-unit id="8Kdvlxd" resname="app-undelete-button">
+        <source>app-undelete-button</source>
+        <target>Undelete</target>
+      </trans-unit>
       <trans-unit id="_zr_FWH" resname="app-therapy-stub-form-label-excerpt">
         <source>app-therapy-stub-form-label-excerpt</source>
         <target>Excerpt</target>
