--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -193,6 +193,10 @@
         <source>app-save-and-new-button</source>
         <target>Save + New</target>
       </trans-unit>
+      <trans-unit id="8AsTaqb" resname="app-therapy-report-select-all">
+        <source>app-therapy-report-select-all</source>
+        <target>Select All</target>
+      </trans-unit>
       <trans-unit id="8AsGalb" resname="app-therapy-report-suppress-labels">
         <source>app-therapy-report-suppress-labels</source>
         <target>Suppress labels</target>
