--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -245,6 +245,10 @@
         <source>app-therapy-scheme-templates</source>
         <target>Saved therapy schemes</target>
       </trans-unit>
+      <trans-unit id="9HQQ1L8" resname="app-therapy-scheme-setting">
+        <source>app-therapy-scheme-setting</source>
+        <target>Scheme Settings</target>
+      </trans-unit>
       <trans-unit id="D6nuB.." resname="app-new-therapy-save-scheme-template">
         <source>app-new-therapy-save-scheme-template</source>
         <target>Save therapy scheme for re-use</target>
